apps/default/heimdall/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: heimdall
  namespace: default
  labels:
    app: heimdall
spec:
  replicas: 2
  selector:
    matchLabels:
      app: heimdall
  template:
    metadata:
      labels:
        app: heimdall
    spec:
      containers:
      - image: linuxserver/heimdall:2.5.1
        name: heimdall
        ports:
          - containerPort: 80
            name: http
            protocol: TCP
        volumeMounts:
          - mountPath: /config
            name: heimdall-vol
      volumes:
        - name: heimdall-vol
          persistentVolumeClaim:
            claimName: heimdall-pvc
