apps/default/heimdall/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: heimdall
  namespace: default
  labels:
    app: heimdall
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: heimdall
  type: LoadBalancer
  loadBalancerIP: 192.168.1.160
